; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_deadlist.c_dsl_deadlist_alloc.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_deadlist.c_dsl_deadlist_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SPA_VERSION_DEADLISTS = common dso_local global i64 0, align 8
@SPA_OLD_MAXBLOCKSIZE = common dso_local global i32 0, align 4
@DMU_OT_DEADLIST = common dso_local global i32 0, align 4
@DMU_OT_DEADLIST_HDR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dsl_deadlist_alloc(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @dmu_objset_spa(i32* %6)
  %8 = call i64 @spa_version(i32 %7)
  %9 = load i64, i64* @SPA_VERSION_DEADLISTS, align 8
  %10 = icmp slt i64 %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @SPA_OLD_MAXBLOCKSIZE, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @bpobj_alloc(i32* %12, i32 %13, i32* %14)
  store i32 %15, i32* %3, align 4
  br label %22

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* @DMU_OT_DEADLIST, align 4
  %19 = load i32, i32* @DMU_OT_DEADLIST_HDR, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @zap_create(i32* %17, i32 %18, i32 %19, i32 4, i32* %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %16, %11
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i64 @spa_version(i32) #1

declare dso_local i32 @dmu_objset_spa(i32*) #1

declare dso_local i32 @bpobj_alloc(i32*, i32, i32*) #1

declare dso_local i32 @zap_create(i32*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
